--- a/app.css
+++ b/app.css
@@ -1656,3 +1656,187 @@ display:none!important;
 
   
 
+
+
+  /* PROBERI ACTIVE BUTTON */
+
+  body {
+    background-color: #eee;
+  }
+  
+  .webinar-posts__event {
+    padding-bottom: 227px;
+  }
+  .webinar-posts__event .container {
+    width: calc(100% - 190px);
+    max-width: 1180px;
+    margin: 0 auto;
+    background-color: transparent;
+    position: relative;
+    padding: 0;
+  }
+  .webinar-posts__event-title {
+    font-size: 60px;
+    font-weight: 800;
+    font-family: "TheSans", sans-serif;
+    color: #000;
+    text-transform: uppercase;
+  }
+  .webinar-posts__event-wrapper {
+    width: 100%;
+  }
+  .webinar-posts__event-list {
+    padding: 0;
+    margin: 0 -20px -40px;
+    list-style-type: none;
+    display: flex;
+    align-items: stretch;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .webinar-posts__event-list li {
+    margin: 0 20px 40px;
+  }
+  .webinar-posts__event-item {
+    width: calc(50% - 40px);
+    overflow: hidden;
+    position: relative;
+  }
+  .webinar-posts__event-item:hover img, .webinar-posts__event-item:active img, .webinar-posts__event-item:focus img {
+    transform: scale(1.08);
+    transition: transform 0.8s ease;
+  }
+  .webinar-posts__event-item:hover:after, .webinar-posts__event-item:active:after, .webinar-posts__event-item:focus:after {
+    height: 10px;
+    transition: height 0.2s ease;
+  }
+  .webinar-posts__event-item:after {
+    content: "";
+    position: absolute;
+    height: 0;
+    background: #fe0a02;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    transition: height 0.2s ease;
+  }
+  .webinar-posts__event-item .category {
+    font-family: "TheSans", sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    color: #FF0000;
+    text-transform: uppercase;
+    margin-bottom: 9px;
+    display: inline-block;
+    text-decoration: none;
+  }
+  /*
+  .webinar-posts__event-item .category:hover, .webinar-posts__event-item .category:active, .webinar-posts__event-item .category:focus {
+   color: #E83316;
+  }
+  */
+  .webinar-posts__event-item .description {
+    font-size: 25px;
+    line-height: 1.32em;
+    font-family: "TheSans", sans-serif;
+    font-weight: 300;
+    margin: 0 0 25px;
+    color: #000;
+  }
+  .webinar-posts__event-item .title {
+    min-height: 60px;
+    margin: 0 0 10px;
+    font-size: 35px;
+    font-family: "TheSans", sans-serif;
+    font-weight: 800;
+    text-transform: uppercase;
+    text-decoration: unset;
+    line-height: 1em;
+  }
+  .webinar-posts__event-item .btn {
+    font-family: "Open Sans", sans-serif;
+    background: 0 0;
+    border: 1px solid #93908d;
+    border-radius: 15px;
+    padding: 5px 15px 6px 15px;
+    margin-top: 5px;
+    color: #93908d;
+    font-size: 18px;
+    line-height: 1.27em;
+    font-weight: 700;
+    display: inline-block;
+    transition: all 0.5s linear;
+    cursor: pointer;
+  }
+  .webinar-posts__event-item .btn:hover, .webinar-posts__event-item .btn:active, .webinar-posts__event-item .btn:focus {
+    color: #fff;
+    background-color: #ff0000;
+    border: 1px solid #E83316;
+  }
+  .webinar-posts__event-link {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: stretch;
+    width: 100%;
+    height: 100%;
+    text-decoration: unset;
+  }
+  .webinar-posts__event-filters {
+    margin: 0 0 73px;
+    padding: 30px 0;
+    position: sticky;
+    z-index: 100;
+    top: 0;
+    background-color: #fff;
+    border-top: 1px solid #C9C9C9;
+    border-bottom: 1px solid #C9C9C9;
+  }
+  .webinar-posts__event-filters .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .webinar-posts__event-filter {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .webinar-posts__event-filter li {
+    margin-right: 20px;
+  }
+  .webinar-posts__event-filter .btn.active {
+    background-color: #E83316;
+    color: #fff;
+  }
+  .webinar-posts__event-filter .btn:hover, .webinar-posts__event-filter .btn:active, .webinar-posts__event-filter .btn:focus {
+    outline: none;
+  }
+  .webinar-posts__event-filter-regions {
+    min-width: 30%;
+  }
+  .webinar-posts__event-filter .checkboxes {
+    position: absolute;
+    overflow: hidden;
+    z-index: -1;
+    opacity: 0;
+  }
+  .webinar-posts__event img {
+    height: 367px;
+    width: 100%;
+    transition: transform 0.8s ease;
+    flex-grow: 0;
+  }
+  .webinar-posts__event .content {
+    padding: 50px 44px 40px;
+    background-color: #fff;
+    flex-grow: 1;
+  }
+  .webinar-posts__event .select2-container {
+    max-width: 450px;
+    margin: 0;
+    border: none;
+  }
