--- a/app.css
+++ b/app.css
@@ -1698,7 +1698,7 @@ display:none!important;
     content: "";
     position: absolute;
     height: 0;
-    background: #fe0a02;
+    background: #232021;
     width: 100%;
     bottom: 0;
     left: 0;
