--- a/app.css
+++ b/app.css
@@ -1663,7 +1663,7 @@ display:none!important;
  /* OVO KONTROLIRA ŠIRINU ITEM COLUMNI 100% */
 
 
-
+/*
  .webinar-posts__event-wrapper {
   width: 100%;
  }
@@ -1704,7 +1704,7 @@ display:none!important;
 
  
 
- 
+
  /*
   .webinar-posts__event-wrapper {
     width: 100%;
