--- a/app.css
+++ b/app.css
@@ -1695,8 +1695,8 @@ background: transparent;
  }
  
  .webinar-posts__event-filter .btn.activex {
-   background-color: #E83316;
-   color: #fff;
+  /*  background-color: #E83316;
+   color: #fff; */
  }
  
  .webinar-posts__event-filter .btn:hover, .webinar-posts__event-filter .btn:active, .webinar-posts__event-filter .btn:focus {
