--- a/app.css
+++ b/app.css
@@ -1712,6 +1712,13 @@ background: transparent;
 
  
 
+
+ .link_container:nth-of-type(1) {
+  padding: 0em 0.5em;
+}
+
+
+
  
  /*
   .webinar-posts__event-wrapper {
