--- a/app.css
+++ b/app.css
@@ -1844,6 +1844,6 @@ background: transparent;
 .popup-style {
 width:300px;
 height: 150px;
-background-color: whitesmoke;
+/* background-color: whitesmoke; */
 color: var(--bcg-lightblue);
 }
