--- a/app.css
+++ b/app.css
@@ -1703,18 +1703,18 @@ background: transparent;
  }
 
 
-/* .newsminigrid.full {
+ .newsminigrid.full {
   -ms-grid-columns: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
   -ms-grid-rows: auto;
   grid-template-rows: auto;
-} */
+} 
 
-.newsminigrid.full {
+/* .newsminigrid.full {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
 }
-
+ */
  
  /* .webinar-posts__event-filter .btn.activex {
    background-color: #E83316;
