--- a/app.css
+++ b/app.css
@@ -1685,10 +1685,17 @@ background: transparent;
    justify-content: space-between;
    flex-wrap: wrap;
  } */
- .webinar-posts__event-list li {
-   margin: 0 20px 40px;
- }
 
+ .webinar-posts__event-list li {
+  margin: 0 20px 40px;
+}
+
+
+ .webinar-posts__event-item {
+  width: calc(50% - 40px);
+ /*   overflow: hidden;
+   position: relative; */
+ }
 
  .webinar-posts__event-item.full {
   width: 100%;
@@ -1696,12 +1703,10 @@ background: transparent;
    position: relative; */
  }
 
-
  .newsimgwrap.full {
    width:100%;
    height:100%
  }
-
 
  .newsminigrid.full {
   -ms-grid-columns: 1fr 1fr;
