--- a/app.css
+++ b/app.css
@@ -1895,7 +1895,7 @@ height: 100px;
 color: var(--bcg-lightblue);
 }
 
-
+/* 
 .mapboxgl-popup-close-button {
 display:none;
 }
@@ -1908,3 +1908,4 @@ width: 300px;
 .mapbox-popup-content-wrapper {
   padding: 1%;
 }
+ */
