--- a/app.css
+++ b/app.css
@@ -304,6 +304,7 @@ html.has-scroll-smooth {
       width: 100%;
       height: 10px;
       top: auto;
+      z-index:5;
       bottom: 0;
       transform: scaleY(1); }
       [data-scroll-direction="horizontal"] .c-scrollbar:hover {
