--- a/app.css
+++ b/app.css
@@ -274,7 +274,7 @@ html.has-scroll-smooth {
     overflow: hidden; }
   
   .has-scroll-smooth [data-scroll-container] {
-    min-height: 100vh; }
+   /*  min-height: 100vh;  */}
   
   [data-scroll-direction="horizontal"] [data-scroll-container] {
     height: 100vh;
