--- a/app.css
+++ b/app.css
@@ -292,7 +292,7 @@ html.has-scroll-smooth {
     right: 0;
     top: 0;
     width: 8px;
-    height: 100%;
+    /* height: 100%; */
     transform-origin: center right;
     transition: transform 0.3s, opacity 0.3s;
     opacity: 0; }
