--- a/app.css
+++ b/app.css
@@ -274,7 +274,7 @@ html.has-scroll-smooth {
     overflow: hidden; }
   
   .has-scroll-smooth [data-scroll-container] {
-   /*  min-height: 100vh;  */}
+    min-height: 100vh; }
   
   [data-scroll-direction="horizontal"] [data-scroll-container] {
     height: 100vh;
@@ -292,7 +292,7 @@ html.has-scroll-smooth {
     right: 0;
     top: 0;
     width: 8px;
-    /* height: 100%; */
+    height: 100%;
     transform-origin: center right;
     transition: transform 0.3s, opacity 0.3s;
     opacity: 0; }
@@ -316,6 +316,7 @@ html.has-scroll-smooth {
     background-color: #231f20;
     opacity: 1;
     width: 8px;
+    height 20px;
     margin: 2px;
     cursor: -webkit-grab;
     cursor: grab; }
