--- a/app.css
+++ b/app.css
@@ -1890,7 +1890,7 @@ background: transparent;
 
 /* MAPBOX */
 
-/* .mapboxgl-popup-content {
+ .mapboxgl-popup-content {
   position: relative;
   background: #fff;
   color: #231f20;
@@ -1899,7 +1899,7 @@ background: transparent;
   padding: 10px 10px 15px;
   pointer-events: auto;
 }
- */
+
 
 /* 
 .mapboxgl-popup-close-button {
