--- a/app.css
+++ b/app.css
@@ -25,7 +25,7 @@ DEFINE ROOT VARIABLES / definiraj svoje
 */
 :root {
   /*BILA JE ŽUTA*/
-  --frkayellow:#231f20;
+  --frkayellow:#ffdc52;
   --frkablack: #231f20;
   /*BILA JE ŽUTA*/
   --loader-width: 50vw;
