--- a/app.css
+++ b/app.css
@@ -568,19 +568,19 @@ body .cursory {
 }
 body .cursor__circle {
   /*position: fixed;
-  top: 0;
+  top: 0;/*  */
   left: 0;*/
   z-index: 10; 
-  mix-blend-mode: difference; 
+ /*  mix-blend-mode: difference;  */
  
   transform: translateX(-50%) translateY(-50%);
 }
-body .cursor__circle--big {
+/* body .cursor__circle--big {
   stroke: #dedede;
   fill: transparent;
      mix-blend-mode: difference; 
   transform: translateX(-50%) translateY(-50%);
-}
+} */
 
 /*
 ================================================================================
