--- a/app.css
+++ b/app.css
@@ -566,15 +566,15 @@ body .cursory {
   pointer-events: none;
 
 }
-/* body .cursor__circle { */
+ body .cursor__circle { 
   /*position: fixed;
   top: 0;/*  */
 /*   left: 0; */
 /*   z-index: 10;  */
  /*  mix-blend-mode: difference;  */
  
-/*   transform: translateX(-50%) translateY(-50%);
-} */
+   transform: translateX(-50%) translateY(-50%);
+} 
 /* body .cursor__circle--big {
   stroke: #dedede;
   fill: transparent;
