--- a/app.css
+++ b/app.css
@@ -502,6 +502,32 @@ ONAMA--KARTA--PULSING BUTTONS
 
 /*
 ================================================================================
+REFERENCE LOGO BOX
+================================================================================
+*/
+
+.reference--logo--outline{
+  aspect-ratio: 1/1; 
+  width: 100%;
+   height: 100%;
+   overflow: hidden;
+ }
+ 
+   .ref-logo-container {
+     position: relative;
+     width: 100%;
+     padding-top: 100%; /* 1:1 Aspect Ratio */
+  }
+  .ref-logo-inner {
+     position: absolute;
+     top: 0;
+     left: 0;
+     bottom: 0;
+     right: 0;
+  }
+
+/*
+================================================================================
 WIZARDRY 1920
 ================================================================================
 */
